2001-01-26  Dekel Tsur  <dekelts@tau.ac.il>

	* math_parser.C (LexGetArg): Fix crash when loading corrupt files.

	* formula.C (LocalDispatch): Before inserting a label in an
	eqnarray, move the cursor to the top level.

	* math_iter.C (getLabel): Test if crow == 0.

2001-01-15  Dekel Tsur  <dekelts@tau.ac.il>

	* math_draw.C (Metrics): Use the correct GetString.
