@@ -1,3 +1,8 @@
+2001-02-02  Dekel Tsur  <dekelts@tau.ac.il>
+
+	* math_symbols.C (math_insert_greek): Move cursor right when
+	unlocking the math inset.
+
 2001-01-26  Dekel Tsur  <dekelts@tau.ac.il>
 
 	* math_parser.C (LexGetArg): Fix crash when loading corrupt files.
